[gd_scene load_steps=23 format=3 uid="uid://dloxvgj0o0aas"]

[ext_resource type="Script" path="res://Scenes/Menus/main_menu.gd" id="1_7n6q0"]
[ext_resource type="Script" path="res://Scenes/Menus/control.gd" id="1_mr2mu"]
[ext_resource type="Texture2D" uid="uid://ccgxfu1vo0nw5" path="res://Assets/UI/Icons/Play.png" id="2_i8p1f"]
[ext_resource type="FontFile" uid="uid://bj06oub24ay2o" path="res://Assets/Font/Aster.ttf" id="2_utqbt"]
[ext_resource type="Texture2D" uid="uid://8on70d34ghqp" path="res://Assets/Icon.png" id="3_adjsq"]
[ext_resource type="Texture2D" uid="uid://c77dhg0rwkgb1" path="res://Assets/UI/Icons/Garage.png" id="3_i2niw"]
[ext_resource type="Texture2D" uid="uid://dtvfmeith420a" path="res://Assets/UI/Icons/Settings.png" id="4_ino3e"]
[ext_resource type="Texture2D" uid="uid://c1g8uqg6pp7qo" path="res://Assets/GodotIcon.png" id="6_1rrf4"]
[ext_resource type="Shader" uid="uid://chvdu88j36ex3" path="res://Shaders/StarryNight.tres" id="7_3fpcd"]
[ext_resource type="Texture2D" uid="uid://y6uvb10g740p" path="res://Assets/Backdrops/noiseTexture.png" id="8_no7lg"]
[ext_resource type="Script" path="res://Scenes/Menus/background.gd" id="9_7xhjc"]
[ext_resource type="Shader" path="res://Shaders/SweepRotateUV.gdshader" id="9_i2j4x"]
[ext_resource type="Texture2D" uid="uid://dtf8hxfnu680n" path="res://Assets/Backdrops/StarTile.png" id="10_rbhsv"]
[ext_resource type="Script" path="res://Scenes/Menus/velocityapplyer.gd" id="11_fn0l6"]
[ext_resource type="PackedScene" uid="uid://dkounxxjgekmy" path="res://Scenes/Player/Player.tscn" id="11_ro5i2"]
[ext_resource type="PackedScene" uid="uid://ctcwf45fx53pw" path="res://Scenes/World/Decoration/asteroid.tscn" id="12_eyusu"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hhixk"]
bg_color = Color(0.215363, 0.438873, 0.370143, 1)
border_width_bottom = 5
border_color = Color(0.0914273, 0.181074, 0.284209, 1)
corner_radius_top_right = 16
corner_radius_bottom_left = 16
corner_detail = 1

[sub_resource type="Theme" id="Theme_pgi4j"]
Button/constants/h_separation = 25
Button/font_sizes/font_size = 32
Button/fonts/font = ExtResource("2_utqbt")
Button/styles/normal = SubResource("StyleBoxFlat_hhixk")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_sokok"]
shader = ExtResource("7_3fpcd")
shader_parameter/SpeedScaling = Vector2(1, 1)
shader_parameter/Color = Color(0.0117647, 0, 0.0862745, 1)
shader_parameter/NoiseTexture = ExtResource("8_no7lg")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1y8bl"]
shader = ExtResource("9_i2j4x")
shader_parameter/XSpeed = 0.007
shader_parameter/YSpeed = 0.005
shader_parameter/XOffset = 0.0
shader_parameter/YOffset = 0.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_recok"]
shader = ExtResource("9_i2j4x")
shader_parameter/XSpeed = -0.002
shader_parameter/YSpeed = -0.003
shader_parameter/XOffset = 2.23
shader_parameter/YOffset = 0.18

[sub_resource type="RectangleShape2D" id="RectangleShape2D_43iub"]
size = Vector2(970, 550)

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_7n6q0")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mr2mu")

[node name="Title" type="TextureRect" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.016
anchor_top = 0.472
anchor_right = 0.016
anchor_bottom = 0.472
offset_left = -0.360001
offset_top = -125.88
offset_right = 281.64
offset_bottom = 0.11998
texture = ExtResource("3_adjsq")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0291667
anchor_top = 0.948148
anchor_right = 0.0291667
anchor_bottom = 0.948148
offset_top = -215.0
offset_right = 210.0
grow_vertical = 0
alignment = 2
metadata/_edit_use_anchors_ = true

[node name="Play" type="Button" parent="CanvasLayer/Control/VBoxContainer"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
theme = SubResource("Theme_pgi4j")
text = "Play"
icon = ExtResource("2_i8p1f")
alignment = 0

[node name="Garage" type="Button" parent="CanvasLayer/Control/VBoxContainer"]
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_utqbt")
theme_override_font_sizes/font_size = 32
text = "Garage"
icon = ExtResource("3_i2niw")
alignment = 0

[node name="Options" type="Button" parent="CanvasLayer/Control/VBoxContainer"]
custom_minimum_size = Vector2(0, 55)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_utqbt")
theme_override_font_sizes/font_size = 32
text = "Settings"
icon = ExtResource("4_ino3e")
alignment = 0

[node name="Quit" type="Button" parent="CanvasLayer/Control/VBoxContainer"]
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_utqbt")
theme_override_font_sizes/font_size = 32
text = "Quit"

[node name="Godot" type="TextureRect" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.9875
anchor_top = 0.977778
anchor_right = 0.9875
anchor_bottom = 0.977778
offset_left = -37.9997
offset_top = -38.0003
grow_horizontal = 0
grow_vertical = 0
texture = ExtResource("6_1rrf4")
metadata/_edit_use_anchors_ = true

[node name="Background" type="CanvasLayer" parent="."]
layer = -1
visible = false
script = ExtResource("9_7xhjc")

[node name="ColorRect" type="ColorRect" parent="Background"]
material = SubResource("ShaderMaterial_sokok")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="TextureRect" type="TextureRect" parent="Background"]
material = SubResource("ShaderMaterial_1y8bl")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("10_rbhsv")
expand_mode = 2
stretch_mode = 1

[node name="TextureRect2" type="TextureRect" parent="Background"]
self_modulate = Color(1, 1, 1, 0.498039)
material = SubResource("ShaderMaterial_recok")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("10_rbhsv")
expand_mode = 2
stretch_mode = 1
flip_h = true

[node name="velocityapplyer" type="Node2D" parent="."]
visible = false
script = ExtResource("11_fn0l6")

[node name="Area2D" type="Area2D" parent="velocityapplyer"]
collision_layer = 0
collision_mask = 7
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="velocityapplyer/Area2D"]
position = Vector2(480, 270)
shape = SubResource("RectangleShape2D_43iub")
debug_color = Color(0, 0.6, 0.701961, 0)

[node name="List" type="Node2D" parent="velocityapplyer"]

[node name="Player" parent="velocityapplyer/List" instance=ExtResource("11_ro5i2")]
position = Vector2(578, 244)
rotation = -1.99685
IS_IN_GARAGE = true
CAN_MOVE = false

[node name="Asteroid" parent="velocityapplyer/List" instance=ExtResource("12_eyusu")]
position = Vector2(219, 128)
mass = 3.0
SIZE = 1
MaxMiningHealth = 20.0
MiningHealth = 20.0
MaxResources = 3
ResourcesLeft = 3
MaxHealth = 20.0
Health = 20.0
Radius = 15.0

[node name="Asteroid7" parent="velocityapplyer/List" instance=ExtResource("12_eyusu")]
position = Vector2(901, 88)
mass = 3.0
SIZE = 1
MaxMiningHealth = 20.0
MiningHealth = 20.0
MaxResources = 3
ResourcesLeft = 3
MaxHealth = 20.0
Health = 20.0
Radius = 15.0

[node name="Asteroid8" parent="velocityapplyer/List" instance=ExtResource("12_eyusu")]
position = Vector2(344, 507)
mass = 3.0
SIZE = 1
MaxMiningHealth = 20.0
MiningHealth = 20.0
MaxResources = 3
ResourcesLeft = 3
MaxHealth = 20.0
Health = 20.0
Radius = 15.0

[node name="Asteroid9" parent="velocityapplyer/List" instance=ExtResource("12_eyusu")]
position = Vector2(5, 53)
mass = 3.0
SIZE = 1
MaxMiningHealth = 20.0
MiningHealth = 20.0
MaxResources = 3
ResourcesLeft = 3
MaxHealth = 20.0
Health = 20.0
Radius = 15.0

[node name="Asteroid2" parent="velocityapplyer/List" instance=ExtResource("12_eyusu")]
position = Vector2(497, 410)
mass = 260.0
SIZE = 9
MaxMiningHealth = 180.0
MiningHealth = 180.0
MaxResources = 35
ResourcesLeft = 35
MaxHealth = 260.0
Health = 260.0
Radius = 71.0

[node name="Asteroid3" parent="velocityapplyer/List" instance=ExtResource("12_eyusu")]
position = Vector2(728, 191)
mass = 81.0
SIZE = 4
MaxMiningHealth = 80.0
MiningHealth = 80.0
MaxResources = 15
ResourcesLeft = 15
MaxHealth = 110.0
Health = 110.0
Radius = 36.0

[node name="Asteroid4" parent="velocityapplyer/List" instance=ExtResource("12_eyusu")]
position = Vector2(520, -1)

[node name="Asteroid5" parent="velocityapplyer/List" instance=ExtResource("12_eyusu")]
position = Vector2(96, 526)
mass = 350.0
SIZE = 12
MaxMiningHealth = 240.0
MiningHealth = 240.0
MaxResources = 47
ResourcesLeft = 47
MaxHealth = 350.0
Health = 350.0
Radius = 92.0

[node name="Asteroid6" parent="velocityapplyer/List" instance=ExtResource("12_eyusu")]
position = Vector2(957, 284)
mass = 200.0
SIZE = 7
MaxMiningHealth = 140.0
MiningHealth = 140.0
MaxResources = 27
ResourcesLeft = 27
MaxHealth = 200.0
Health = 200.0
Radius = 57.0

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(480, 270)

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(-2, 546)

[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer/Play" to="CanvasLayer/Control" method="_on_play_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer/Garage" to="CanvasLayer/Control" method="_on_garage_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer/Options" to="CanvasLayer/Control" method="_on_options_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer/Quit" to="CanvasLayer/Control" method="_on_quit_pressed"]
[connection signal="body_exited" from="velocityapplyer/Area2D" to="velocityapplyer" method="_on_area_2d_body_exited"]
